// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SteamWidget renders AI summary if present 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1jvl2a0"
    >
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-1hlyxwi"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Half-Life
          </div>
          <div
            class="css-k763k9"
          >
            2 hours
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-1hlyxwi"
            src="https://example.com/portal.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Portal
          </div>
          <div
            class="css-k763k9"
          >
            45 minutes
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-zxiliy"
      >
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-1hlyxwi"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              1
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              Cities: Skylines
            </div>
            <div
              class="css-k763k9"
            >
              757.35h total • 2 hours recently
            </div>
          </div>
        </div>
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-1hlyxwi"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              2
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-k763k9"
            >
              277.83h total
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
    <div
      class="css-1p1ng4s"
    >
      <div
        class="css-1rzhlu5"
      >
        <div
          class="css-187niig"
        >
          <div
            class="css-10qk8di"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-robot css-1yck3jj"
              data-icon="robot"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
                fill="currentColor"
              />
            </svg>
            <h3
              class="css-8rzdzz"
            >
              AI Summary
            </h3>
          </div>
          <div
            class="css-is6wc5"
          >
            <p>
              This is an AI summary
            </p>
          </div>
        </div>
      </div>
      <p
        class="css-hhyyup"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-robot css-heprci"
          data-icon="robot"
          data-prefix="fas"
          role="img"
          viewBox="0 0 640 512"
        >
          <path
            d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
            fill="currentColor"
          />
        </svg>
        Generated by Gemini (AI)
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders correctly with sample data 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1jvl2a0"
    >
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-1hlyxwi"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Half-Life
          </div>
          <div
            class="css-k763k9"
          >
            2 hours
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-1hlyxwi"
            src="https://example.com/portal.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Portal
          </div>
          <div
            class="css-k763k9"
          >
            45 minutes
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-zxiliy"
      >
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-1hlyxwi"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              1
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              Cities: Skylines
            </div>
            <div
              class="css-k763k9"
            >
              757.35h total • 2 hours recently
            </div>
          </div>
        </div>
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-1hlyxwi"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              2
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-k763k9"
            >
              277.83h total
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders error state (hasFatalError) 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-16q7rgc"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders loading state 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1jvl2a0"
    >
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
      <div
        aria-hidden="true"
        class="css-eom9to"
      >
        <div
          class="show-loading-animation"
          style="width: 100%; height: 200px;"
        >
          <div
            class="rect-shape"
            style="background-color: rgb(239, 239, 239); width: 100%; height: 200px; margin-right: 10px; border-radius: 8px;"
          />
        </div>
        <div
          class="css-16i9tn4"
        />
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-nyc2gr"
      >
        <div
          class="css-17cb55"
        />
        <p
          class="css-gej412"
        >
          Loading Gaming Library...
        </p>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="css-5xb7e8"
    >
      <div
        class="css-1rzhlu5"
      >
        <div
          class="css-187niig"
        >
          <div
            class="css-10qk8di"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-robot css-vepx1b"
              data-icon="robot"
              data-prefix="fas"
              role="img"
              viewBox="0 0 640 512"
            >
              <path
                d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
                fill="currentColor"
              />
            </svg>
            <h3
              class="css-1njovxx"
            >
              AI Summary
            </h3>
          </div>
          <div
            class="show-loading-animation css-is6wc5"
          >
            <div
              class="text-block"
              style="width: 100%;"
            >
              <div
                class="text-row"
                style="max-height: 20%; width: 97%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0px;"
              />
              <div
                class="text-row"
                style="max-height: 20%; width: 100%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
              <div
                class="text-row"
                style="max-height: 20%; width: 94%; height: 1em; background-color: rgb(239, 239, 239); margin-top: 0.7em;"
              />
            </div>
          </div>
        </div>
        <div
          class="css-12pe7f2"
        >
          <div
            aria-hidden="true"
            class="css-2d54d9"
          />
        </div>
      </div>
      <p
        class="css-1uvvt1t"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-robot css-fk20h4"
          data-icon="robot"
          data-prefix="fas"
          role="img"
          viewBox="0 0 640 512"
        >
          <path
            d="M352 0c0-17.7-14.3-32-32-32S288-17.7 288 0l0 64-96 0c-53 0-96 43-96 96l0 224c0 53 43 96 96 96l256 0c53 0 96-43 96-96l0-224c0-53-43-96-96-96l-96 0 0-64zM160 368c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zm120 0c0-13.3 10.7-24 24-24l32 0c13.3 0 24 10.7 24 24s-10.7 24-24 24l-32 0c-13.3 0-24-10.7-24-24zM224 176a48 48 0 1 1 0 96 48 48 0 1 1 0-96zm144 48a48 48 0 1 1 96 0 48 48 0 1 1 -96 0zM64 224c0-17.7-14.3-32-32-32S0 206.3 0 224l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96zm544-32c-17.7 0-32 14.3-32 32l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32l0-96c0-17.7-14.3-32-32-32z"
            fill="currentColor"
          />
        </svg>
        Generated by Gemini (AI)
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty metrics 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Recently-Played Games
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      Games I've played in the last two weeks.
    </p>
    <div
      class="css-1jvl2a0"
    >
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Half-Life header"
            class="css-1hlyxwi"
            src="https://example.com/halflife.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Half-Life
          </div>
          <div
            class="css-k763k9"
          >
            2 hours
          </div>
        </div>
      </div>
      <div
        class="css-xsvu8c"
      >
        <div
          class="css-w24l45"
        >
          <img
            alt="Portal header"
            class="css-1hlyxwi"
            src="https://example.com/portal.jpg"
          />
          <div
            class="css-13txfr7"
          />
        </div>
        <div
          class="css-rr301l"
        >
          <div
            class="css-rkrxe3"
          >
            Portal
          </div>
          <div
            class="css-k763k9"
          >
            45 minutes
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-zxiliy"
      >
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="Cities: Skylines header"
              class="css-1hlyxwi"
              src="https://example.com/cities-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              1
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              Cities: Skylines
            </div>
            <div
              class="css-k763k9"
            >
              757.35h total • 2 hours recently
            </div>
          </div>
        </div>
        <div
          class="css-xsvu8c"
        >
          <div
            class="css-w24l45"
          >
            <img
              alt="ARK: Survival Evolved header"
              class="css-1hlyxwi"
              src="https://example.com/ark-icon.jpg"
            />
            <div
              class="css-c86zxy"
            >
              2
            </div>
            <div
              class="css-13txfr7"
            />
          </div>
          <div
            class="css-rr301l"
          >
            <div
              class="css-rkrxe3"
            >
              ARK: Survival Evolved
            </div>
            <div
              class="css-k763k9"
            >
              277.83h total
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-rcbrnq"
      >
        <div
          class="css-aq86v7"
        >
          Total Hours: 
          <span
            class="css-1eduwqk"
          >
            1035.2h
          </span>
        </div>
        <div
          class="css-aq86v7"
        >
          Average: 
          <span
            class="css-1eduwqk"
          >
            517.6h per game
          </span>
        </div>
      </div>
      <div
        class="css-1gnkw3u"
      >
        <a
          class="css-4buc8m"
          href="https://steamcommunity.com/id/themeuser/games/?tab=all"
        >
          View complete gaming library
          <span>
            <svg
              aria-hidden="true"
              focusable="false"
              height="0.75em"
              viewBox="0 0 512 512"
              width="0.75em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M432 320h-32a16 16 0 0 0-16 16v112H64V128h144a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16H48a48 48 0 0 0-48 48v352a48 48 0 0 0 48 48h352a48 48 0 0 0 48-48V336a16 16 0 0 0-16-16zM488 0h-168c-13.3 0-24 10.7-24 24v8c0 13.3 10.7 24 24 24h69.2L207 279.6a24.06 24.06 0 0 0 0 34l10.2 10.2a24.06 24.06 0 0 0 34 0L425 128.8V200c0 13.3 10.7 24 24 24h8c13.3 0 24-10.7 24-24V56c0-30.9-25.1-56-56-56z"
                fill="currentColor"
              />
            </svg>
          </span>
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SteamWidget renders with empty recentlyPlayedGames and ownedGames 1`] = `
<DocumentFragment>
  <div
    data-testid="Widget"
  >
    <div
      data-testid="WidgetHeader"
    >
      Steam
    </div>
    <div
      class="css-5abbi3"
    >
      <h3
        class="css-9nh3l5"
      >
        Leaderboard
      </h3>
    </div>
    <p
      class="css-zxnhh7"
    >
      My top 10 most played games.
    </p>
    <div
      class="css-sak8bt"
    >
      <div
        class="css-16q7rgc"
      >
        <p
          class="css-13s56l1"
        >
          No gaming data available for library.
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
